# jp-web-novel-editor

./: .gitignore  Cargo.toml  Dioxus.toml  index.html
assets/: main.scss
src/: app.rs  main.rs  menu.rs
src/novel/: mod.rs  novel_input.rs  novel_view.rs
