[package]
name = "jp-web-novel-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.10", features = ["csr"] }
reactive_stores = "0.2.5"
jp-web-novel-text = { git = "https://github.com/qwerty2501/jp-web-novel-text.git", branch = "main" }
wasm-bindgen = "0.2.104"
web-sys = "0.3.81"
